--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "secret-sharing.js",
-	"main": "secrets.js",
+	"main": "secret-sharing.js",
 	"version": "1.3.0",
 	"homepage": "https://github.com/virtualcapitalofamerica/secret-sharing.js",
 	"authors": [
