included travis integration

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"standard": "^11.0.1"
 	},
 	"scripts": {
+    "install-grunt": "npm install -g grunt-cli",
 		"build": "grunt",
 		"dev": "grunt watch",
 		"test": "./node_modules/.bin/standard \"secret-sharing.js\" && node ./node_modules/jasmine-node/bin/jasmine-node spec/"
