--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "secret-sharing.js",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"description": "Shamir's Secret Sharing Scheme for javascript - https://www.virtualcapitalofamerica.com",
-	"main": "dist/secret-sharing.js",
+	"main": "build/secret-sharing.js",
 	"directories": {
 		"example": "examples"
 	},
