--- a/package.json
+++ b/package.json
@@ -6,25 +6,27 @@
 	"directories": {
 		"example": "examples"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"growl": "^1.10.2"
+	},
 	"devDependencies": {
 		"benchmark": "^2.1.4",
-		"grunt": "^1.0.2",
+		"grunt": "^1.0.3",
 		"grunt-contrib-concat": "^1.0.1",
 		"grunt-contrib-obfuscator": "^4.0.0",
 		"grunt-contrib-uglify": "^3.3.0",
-		"grunt-contrib-watch": "^1.0.0",
+		"grunt-contrib-watch": "^1.1.0",
 		"grunt-eslint": "^20.1.0",
 		"jasmine": "^3.1.0",
 		"jasmine-core": "^3.1.0",
-		"jasmine-node": "^1.14.5",
+		"jasmine-node": "^2.0.1",
 		"jquery": "^3.3.1",
 		"randomorg-js": "^1.0.0",
 		"sjcl": "^1.0.7",
 		"standard": "^11.0.1"
 	},
 	"scripts": {
-    "install-grunt": "npm install -g grunt-cli",
+		"install-grunt": "npm install -g grunt-cli",
 		"build": "grunt",
 		"dev": "grunt watch",
 		"test": "./node_modules/.bin/standard \"secret-sharing.js\""
